--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/NihadTk/AppoloForked/tree/main/Demos/Compact_App_Layout/index.html">
+
+
+
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://github.com/NihadTk/AppoloForked/tree/main/Demos/Compact_App_Layout/index.html">
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        If you are not redirected automatically, 
+        follow the <a href="html/index.html">link to the documentation</a>
+    </body>
+</html>
