--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://github.com/NihadTk/AppoloForked/tree/main/Demos/Compact_App_Layout/index.html">
+        <meta http-equiv="refresh" content="0; url=https://repo.github.io/NihadTk/AppoloForked/tree/main/Demos/Compact_App_Layout/index.html">
         <title>Page Redirection</title>
     </head>
     <body>
