--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://nihadtk.github.io/AppoloForked/Demos/Compact_App_Layout/">
+        <meta http-equiv="refresh" content="0; url=https://nihadtk.github.io/AppoloForked/Demos/Compact_App_Layout/index.html">
         <title>Page Redirection</title>
     </head>
     <body>
